@@ -111,8 +111,8 @@ KNOWN PROBLEMS DUE TO NCO:
 This section of ANNOUNCE reports and reminds users of the
 existence and severity of known, not yet fixed, problems. 
 These problems occur with NCO 5.1.4 built/tested under
-MacOS 13.1 with netCDF 4.9.1-RC2 on HDF5 1.12.2 and with
-Linux with netCDF 4.8.1 on HDF5 1.8.19.
+MacOS 13.2 with netCDF 4.9.1 on HDF5 1.12.2 and with
+Linux with netCDF 4.9.1 on HDF5 1.8.19.
 
 A. NOT YET FIXED (NCO problem)
    Correctly read arrays of NC_STRING with embedded delimiters in ncatted arguments
