@@ -71,7 +71,7 @@ Try to disable Spammers' machines:
 <p><h1 align="center">Bienvenue sur le netCDF Operator (NCO) site</h1>
 
 <p><h2>
-Current stable NCO version is 5.1.4 released <!--#flastmod file="src/nco-5.1.4.tar.gz"-->
+Current stable NCO version is 5.1.5 released <!--#flastmod file="src/nco-5.1.5.tar.gz"-->
 </h2>
 
 <table border=0 width=100%>
@@ -155,7 +155,8 @@ and
 <h2>Recent Releases &amp; Milestones</h2>
 
 <ul>
-<li>2023 Feb&nbsp;09: 5.1.5 <i>In Progress...</i>
+<li>2023 Jun&nbsp;XX: 5.1.6 <i>In Progress...</i>
+<li>2023 Mar&nbsp;14: 5.1.5 Small features/fixes
 <li>2023 Jan&nbsp;10: 5.1.4 Depth Interpolation
 <li>2022 Nov&nbsp;28: 5.1.3 EAMxx fix
 <li>2022 Nov&nbsp;18: 5.1.2 EAMxx
@@ -644,7 +645,7 @@ Identical copies of those tarballs are also stored
 <a href="http://nco.sf.net/src">here</a> on SourceForge for historical
 continuity.
 You may retrieve the source of tagged versions directly with, e.g.,
-<tt>git clone -b 5.1.4 http://github.com/nco/nco.git nco-5.1.4</tt></a>.
+<tt>git clone -b 5.1.5 http://github.com/nco/nco.git nco-5.1.5</tt></a>.
 <ul>
 <li><b>NCO 5.1.6</b>: (<i>Future</i>)
 netCDF4 user-defined types support;
@@ -765,7 +766,7 @@ Or, alternatively, permanently add conda-forge (which teems with goodies besides
 &lsquo;<tt>conda config --add channels conda-forge</tt>&rsquo;, then
 install NCO with &lsquo;<tt>conda install nco</tt>&rsquo;.
 The default NCO installed by <tt>conda</tt> is generally within a month of the latest release. 
-<li><a href="https://github.com/conda-forge/nco-feedstock">nco-5.1.4</a> Executables Anaconda-compatible. Maintained by Filipe Fernandes.</li>
+<li><a href="https://github.com/conda-forge/nco-feedstock">nco-5.1.5</a> Executables Anaconda-compatible. Maintained by Filipe Fernandes.</li>
 Thanks to Rich Signell, Filipe Fernandes, Pedro Vicente, Xylar Asay-Davis and others for developing and maintaining the NCO package for conda.
 </ul>
 
@@ -774,7 +775,7 @@ Thanks to Rich Signell, Filipe Fernandes, Pedro Vicente, Xylar Asay-Davis and ot
 <h3><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux</a></h3>
 <ul>
 <!--
-<li><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux-compatible Intel systems, prebuilt binary executable <a href="http://www.debian.org">deb</a>: <a href="http://packages.debian.org/testing/math/nco.html">nco-5.1.4</a></li>
+<li><a href="http://www.debian.org">Debian</a> and <a href="http://www.ubuntu.com">Ubuntu</a> GNU/Linux-compatible Intel systems, prebuilt binary executable <a href="http://www.debian.org">deb</a>: <a href="http://packages.debian.org/testing/math/nco.html">nco-5.1.5</a></li>
 -->
 <a href="http://packages.debian.org/unstable/science/nco">Debian NCO</a> and 
 <a href="https://launchpad.net/ubuntu/+source/nco">Ubuntu NCO</a> homepages.
@@ -782,8 +783,8 @@ Thanks to Rich Signell, Filipe Fernandes, Pedro Vicente, Xylar Asay-Davis and ot
 NCO packages in the Debian/Ubuntu repositories (e.g., Sid and Raring) generally lag the packages distributed here by 6&ndash;12 months.
 <a name="beta"></a><a name="prerelease"> <!-- http://nco.sf.net#beta -->
 Newer (beta- or pre-release) packages are often available for intrepid Debian/Ubuntu users as described <a href="https://github.com/nco/nco/tree/master/doc/beta.txt">here</a>.
-<dt>Debian package for most recent NCO release (install with, e.g., &lsquo;<tt>dpkg --install nco_5.1.4-1_i386.deb</tt>&rsquo;):</dt>
-<li><a href="https://launchpad.net/ubuntu/+source/nco/5.1.4-1">nco_5.1.4-1_amd64.deb</a> : Executables AMD64-compatible</li>
+<dt>Debian package for most recent NCO release (install with, e.g., &lsquo;<tt>dpkg --install nco_5.1.5-1_i386.deb</tt>&rsquo;):</dt>
+<li><a href="https://launchpad.net/ubuntu/+source/nco/5.1.5-1">nco_5.1.5-1_amd64.deb</a> : Executables AMD64-compatible</li>
 Thanks to Daniel Baumann, Sebastian Couwenberg, Barry deFreese, Francesco Lovergine, 
 Brian Mays, Rorik Peterson, and Matej Vela for their help packaging
 NCO for Debian over the years. 
@@ -825,12 +826,12 @@ Thanks to Gavin Burris and Kyle Wilcox for documenting build procedures for RHEL
 <h3><a href="http://www.apple.com/macosx/">Mac&nbsp;OS&nbsp;Darwin</a></h3>
 <ul>
 <!-- 
-# MacOS 13.1.0 (Ventura) systems (firn, sastrugi, spectral):
+# MacOS 13.2 (Ventura) systems (firn, sastrugi, spectral):
 /usr/bin/scp ~/nco/doc/index.shtml zender,nco@web.sf.net:/home/project-web/nco/htdocs
-cd ~/bin;tar cvzf ${DATA}/nco-5.1.4.macos.13.1.tar.gz nc*;scp ${DATA}/nco-5.1.4.macos.13.1.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src
+cd ~/bin;tar cvzf ${DATA}/nco-5.1.5.macos.13.2.tar.gz nc*;scp ${DATA}/nco-5.1.5.macos.13.2.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src
 -->
 The most up-to-date executables are probably those in the tarball below. Those unfamiliar with installing executables from tarballs may try the (older) <a href="http://en.wikipedia.org/wiki/Apple_Disk_Image">DMG</a> files (you may need to add <tt>/opt/local/bin</tt> to your executable path to access those operators).
-<li><a href="src/nco-5.1.4.macos.13.1.tar.gz">nco-5.1.4.macos.13.1.tar.gz</a> (<!--#fsize file="src/nco-5.1.4.macos.13.1.tar.gz"-->): Executables MacOS 13.1-compatible (last updated <!--#flastmod file="src/nco-5.1.4.macos.13.1.tar.gz"-->). Maintained by NCO Project.</li>
+<li><a href="src/nco-5.1.5.macos.13.2.tar.gz">nco-5.1.5.macos.13.2.tar.gz</a> (<!--#fsize file="src/nco-5.1.5.macos.13.2.tar.gz"-->): Executables MacOS 13.2-compatible (last updated <!--#flastmod file="src/nco-5.1.5.macos.13.2.tar.gz"-->). Maintained by NCO Project.</li>
 <li><a href="http://fink.sf.net">Fink</a> packages for <a href="http://fink.sf.net/pdb/package.php/nco">NCO</a>: Currently NCO 4.9.5. Maintained by Alexander Hansen.</li> 
 <li><a href="http://brew.sh">Homebrew</a> packages for <a href="https://formulae.brew.sh/formula/nco">NCO</a>: Currently NCO 5.1.1. Install with &lsquo;<tt>brew install nco</tt>&rsquo;. Maintained by Carlo Cabrera, Ian Lancaster, Alejandro Soto, and others over the years.</li> 
 <li><a href="http://trac.macosforge.org/projects/macports/wiki">MacPorts</a> infrastructure for <a href="https://ports.macports.org/port/nco">NCO</a>: <a href="https://ports.macports.org/port/nco">Portfile</a>: Currently NCO 5.1.1. Install with &lsquo;<tt>sudo port install nco</tt>&rsquo;. Maintained by Takeshi Enomoto.</li>
@@ -1033,12 +1034,12 @@ On the <a href="https://sourceforge.net/p/nco/bugs">Bug Tickets</a> site.</li>
 The simplest way to acquire the source is to download the compressed tarball:
 <ul>
 <li>
-<!-- scp ${DATA}/nco-5.1.4.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src -->
-<a href="https://github.com/nco/nco/archive/5.1.4.tar.gz">nco-5.1.4.tar.gz</a> 
-(<!--#fsize file="src/nco-5.1.4.tar.gz"--> compressed tar-file)<br>
-<!--#exec cmd="openssl dgst -md5 src/nco-5.1.4.tar.gz"--><br>
-<!--#exec cmd="openssl dgst -sha1 src/nco-5.1.4.tar.gz"--><br>
-<!--#exec cmd="openssl dgst -sha256 src/nco-5.1.4.tar.gz"--> 
+<!-- scp ${DATA}/nco-5.1.5.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src -->
+<a href="https://github.com/nco/nco/archive/5.1.5.tar.gz">nco-5.1.5.tar.gz</a> 
+(<!--#fsize file="src/nco-5.1.5.tar.gz"--> compressed tar-file)<br>
+<!--#exec cmd="openssl dgst -md5 src/nco-5.1.5.tar.gz"--><br>
+<!--#exec cmd="openssl dgst -sha1 src/nco-5.1.5.tar.gz"--><br>
+<!--#exec cmd="openssl dgst -sha256 src/nco-5.1.5.tar.gz"--> 
 </li>
 </ul>
 
@@ -1059,8 +1060,8 @@ To avoid the churn that comes with using the latest snapshot,
 potential contributors may wish to retrieve a recent tagged (i.e.,
 stable and released) version, 
 This command retrieves the entire NCO repository (&lt; 20&nbsp;MB) and
-then checks out NCO version <tt>5.1.4</tt>:
-<p><tt>git clone https://github.com/nco/nco.git;cd nco;git checkout 5.1.4</tt></p>
+then checks out NCO version <tt>5.1.5</tt>:
+<p><tt>git clone https://github.com/nco/nco.git;cd nco;git checkout 5.1.5</tt></p>
 However, the most efficient way to actively track and develop NCO is to
 retrieve the current (&ldquo;bleeding edge&rdquo;) NCO snapshot.
 This command retrieves the latest NCO master branch into a local
@@ -1070,12 +1071,12 @@ directory named <tt>nco</tt>:
 Track changes to the development version using
 <p><tt>cd nco;git pull</tt></p>
 One difference between running a "tagged" release 
-(e.g., <tt>5.1.4</tt>) and the development version is that the
+(e.g., <tt>5.1.5</tt>) and the development version is that the
 tagged release operators will print a valid version number (e.g.,
-<tt>5.1.4</tt>) when asked to do so with the <tt>-r</tt> flag
+<tt>5.1.5</tt>) when asked to do so with the <tt>-r</tt> flag
 (e.g., <tt>ncks -r</tt>).
 Snapshots will include the sub-version and patch-level in the version
-information (e.g., <tt>5.1.4-alpha06</tt>). 
+information (e.g., <tt>5.1.5-alpha06</tt>). 
 
 <!--
 <a name="doxy"></a>
@@ -1257,9 +1258,9 @@ As of 20131101 there is no Cygwin package for ANTLR, and the Cygwin netCDF packa
 
 <li>Once you have installed the pre-requisites as shown above, you may then build the latest stable NCO and install it in, e.g., <tt>/usr/local</tt> with: 
 <tt>
-<dt>wget https://github.com/nco/nco/archive/5.1.4.tar.gz</dt>
-<dt>tar xvzf 5.1.4.tar.gz</dt>
-<dt>cd nco-5.1.4</dt>
+<dt>wget https://github.com/nco/nco/archive/5.1.5.tar.gz</dt>
+<dt>tar xvzf 5.1.5.tar.gz</dt>
+<dt>cd nco-5.1.5</dt>
 <dt>./configure --prefix=/usr/local</dt>
 <dt>make</dt>
 <dt>sudo make install</dt>
