@@ -128,11 +128,11 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.1.5-beta01
-@set doc-edition 5.1.5-beta01
+@set nco-edition 5.1.5
+@set doc-edition 5.1.5
 @set copyright-years 1995--2023
 @set update-year 2023
-@set update-date 7 March 2023
+@set update-date 14 March 2023
 @set update-month March 2023
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
